css skapad med basinfo

--- a/webbstuff/index.html
+++ b/webbstuff/index.html
@@ -1,1 +1,23 @@
-tomt mothafuckkkaaaaa1
+<!DOCTYPE html>
+
+<html>
+ 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+  <title>GoCRAZY Webbpage</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+</head>
+
+
+<body>
+    
+    
+   
+  
+  
+  <div id ="footer">
+    <p>This webbpage is created 2012-10-16</p>
+  </div>
+</body>
+</html>
