läggt till med grund...

--- a/webbstuff/index.html
+++ b/webbstuff/index.html
@@ -11,11 +11,16 @@
 
 
 <body>
-    
-    
+ <div id ="container">
+  
+  <div id= "header">
+	  <h1 id="titel"> Programmingcircle </h1>
+	  <h3> These guys are in it --> Olov, Jesper &amp; Daniel </h3>
+	 </div> <!--end of header-->
+ 
    
   
-  
+  </div> <!--end of container-->
   <div id ="footer">
     <p>This webbpage is created 2012-10-16</p>
   </div>
