--- a/webbstuff/GoCrazyIndex.html
+++ b/webbstuff/GoCrazyIndex.html
@@ -63,8 +63,9 @@ adfgadfhad fj klgh adjkfgh a djklfgadf
 gadfghad fhadghad hadhadhasdfhafhadsfh
 adfhadfhafh </p>
 
-
+<img src="webbstuff/paw.png" class="paw">
     </div><!--end of centerbar-->
+
 
     <div id ="footer">
     	<p>This webbpage is created 2012-10-16</p>
