--- a/webbstuff/GoCrazyIndex.html
+++ b/webbstuff/GoCrazyIndex.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title> GoCRAZY Webbpage </title>
-    <link rel="stylesheet" type="text/css" href="webbstuff/GoCrazyStyle.css"/>
+    <link rel="stylesheet" type="text/css" href="GoCrazyStyle.css"/>
 </head>
 
 <body>
