--- a/webbstuff/GoCrazyIndex.html
+++ b/webbstuff/GoCrazyIndex.html
@@ -43,7 +43,7 @@
 
 
     <div id ="footer">
-    	<p>This webbpage is created 2012-10-16</p>
+    	<p>This webbpage was created 2012-10-16</p>
     </div><!--end of footer-->
     </div><!--end of container-->
 </body>
