Removed the html/template caching. We shouldn't go ahead of ourself and using caching before we have a good idea on how we want to implement the updates. Especially during development it's annoying to having to restart the webserver everytime you change a html file.

--- a/webbstuff/GoCrazyIndex.html
+++ b/webbstuff/GoCrazyIndex.html
@@ -27,7 +27,8 @@
 	    </div>
     </div><!--end of leftsidebar-->
   
-    <div id="centerbar">	
+    <div id="centerbar">
+    <text>Heja baluba</text>
 <img src="webbstuff/paw.png" class="paw">
     </div><!--end of centerbar-->
 
