Made simple html file for login

--- a/webbstuff/GoCrazyIndex.html
+++ b/webbstuff/GoCrazyIndex.html
@@ -24,6 +24,7 @@
     <div id="leftsidebar">
 	    <div class="leftsidebarbox">
 	        <p> livet till vänster! </p>
+			<a href="webbstuff/login.html">Log in</a>
 	    </div>
     </div><!--end of leftsidebar-->
   
