change the file heirachy logic completly, hope it suits ya ;)

--- a/main_web/main.html
+++ b/main_web/main.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title> GoCRAZY Webbpage </title>
-    <link rel="stylesheet" type="text/css" href="webbstuff/GoCrazyStyle.css"/>
+    <link rel="stylesheet" type="text/css" href="main_web/main.css"/>
 </head>
 
 <body>
@@ -24,13 +24,12 @@
     <div id="leftsidebar">
 	    <div class="leftsidebarbox">
 	        <p> livet till vänster! </p>
-			<a href="webbstuff/login.html">Log in</a>
 	    </div>
     </div><!--end of leftsidebar-->
   
     <div id="centerbar">
     {{.}}
-<img src="webbstuff/paw.png" class="paw">
+<img src="main_web/paw.png" class="paw">
     </div><!--end of centerbar-->
 
     <div id ="footer">
